<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gym</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">play</string>
    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="train_video">Посмотреть тренировки</string>
    <string name="muscinf">О мышцах!</string>
    <string name="shoulders">Плечи</string>
    <string name="biceps">Бицепс</string>
    <string name="forearms">Предплечья</string>
    <string name="chest">Грудь</string>
    <string name="abs">Пресс</string>
    <string name="quads">Квадрицепсы</string>
    <string name="neck">Шея</string>
    <string name="traps">Трапеции</string>
    <string name="triceps">Трицепс</string>
    <string name="lats">Широчайшие</string>
    <string name="middleback">Средняя часть спины</string>
    <string name="lowerback">Нижняя часть спины</string>
    <string name="glutes">Ягодицы</string>
    <string name="hamstrings">Бедра</string>
    <string name="calves">Икры</string>
    <string name="add_title">Добавьте упражнение</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="ex_name">Название упражнения</string>
    <string name="ex_quant">Количество подходов :  </string>
    <string name="ex_in_one_quant">Количество повторов :</string>
    <string name="delete_record">Удалить запись</string>
    <string name="choose_days">Выбрать тренировочные дни</string>
    <string name="delete_all">Удалить</string>
    <string name="additional_help">Доп. возможности</string>
    <string name="confirm_delete_message">Вы уверены что хотите удалить текущую программу тренировок?</string>
    <string name="not_chosen">Сначала выбирите дни тренировки</string>


    <string-array name="muscleList">
        <item>shoulders</item>
        <item>biceps</item>
        <item>forearms</item>
        <item>chest</item>
        <item>abs</item>
        <item>quads</item>
        <item>neck</item>
        <item>traps</item>
        <item>triceps</item>
        <item>lats</item>
        <item>middleback</item>
        <item>lowerback</item>
        <item>glutes</item>
        <item>hamstrings</item>
        <item>calves</item>
    </string-array>

    <string-array name="week_days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="week_days_short">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>
    <string name="title_activity_train">Дневник тренировок</string>

</resources>
